--- a/Front/package.json
+++ b/Front/package.json
@@ -22,7 +22,9 @@
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.13.3",
     "react-native-reanimated": "^3.5.4",
-    "react-native-screens": "^3.26.0"
+    "react-native-screens": "^3.26.0",
+    "react-native-splash-screen": "^3.3.0",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
