--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,18 +1,19 @@
 # MySQL8 ??
-spring.datasource.url=jdbc:mysql://localhost:3306/kkori?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=twja0930
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S09P31C110?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=S09P31C110
+spring.datasource.password=KC7rv71Wck
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
 
 # ??? SQL ?? ??
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 # hibernate ??
-spring.jpa.database=mysql
+#spring.jpa.database=mariadb
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.format_sql=true
