--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation group: 'com.zaxxer', name: 'HikariCP', version: '2.3.2'
+
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
 
