--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-#spring.datasource.hikari.maximum-pool-size=100000
+spring.datasource.hikari.maximum-pool-size=100000
 
 
 
