--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
